# ot-harjoitustyo

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/src/: maksukortti.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
yksikkomuunnin/: .pylintrc  README.md  pyproject.toml  tasks.py
yksikkomuunnin/data/: units.txt
yksikkomuunnin/src/: main.py  pyproject.toml
yksikkomuunnin/src/repositories/: unit_repository.py
yksikkomuunnin/src/services/: conversion_service.py  history_logger.py
yksikkomuunnin/src/tests/: test_conversion_service.py  test_history_logger.py  test_unit_repository.py
yksikkomuunnin/src/ui/: text_ui.py
