[tool.poetry]
name = "yksikkomuunnin-harjoitustyo"
version = "0.1.0"
description = "Komentorivipohjainen yksikkömuunnin"
authors = ["asmo <asmo.koivula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.1"
pytest = "^9.0.1"
coverage = "^7.1.1"
pylint = "^4.0.3"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"